[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
haku.path = "crates/haku"
log = "0.4.22"
rkgk-image-ops.path = "crates/rkgk-image-ops"

[profile.dev.package.rkgk-image-ops]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
panic = "abort"
opt-level = 1

[profile.wasm-dev.package.tiny-skia]
opt-level = 3

[profile.wasm-release]
inherits = "release"
panic = "abort"
